temp feed filtering and overlap fix on static elements

--- a/src/App.scss
+++ b/src/App.scss
@@ -196,6 +196,7 @@ $theme-colors: (
   background-color:  $dp-2;
   padding-right: .75rem;
   padding-left: .75rem;
+  z-index: 0;
   &__reviewer_image{
     width: 100%;  
     height: 100px;
@@ -228,6 +229,9 @@ $theme-colors: (
     position: fixed;
     pointer-events: none; 
   }
+  &__mid-col-top{
+    z-index: 5;
+  }
   &__left-col{
     &__inner{
       padding-left: 1rem;
@@ -242,8 +246,9 @@ $theme-colors: (
   }
 }
 .book-details__tab-bar{
-  top: calc($navbar-height + $book-details-top-height);
+  top: calc($navbar-height + $book-details-top-height - 2px);
   position: sticky;
+  padding-top: 2px;
 }
 .book-details__mid-col-bottom{
   // margin-top: $navbar-height + $book-details-top-height;
@@ -261,6 +266,7 @@ $theme-colors: (
 .top-navbar, .book-details__mid-col-top-header,.book-details__tab-bar {
   background-color: $body-bg;
   z-index: 1;
+
 }
 .navbar-brand{
   font-size:$logo-font-size;
@@ -268,6 +274,7 @@ $theme-colors: (
 
 .top-navbar{
   height: $navbar-height;
+  z-index: 9000;
 }
 .book-carousel{
   width: 100%;
@@ -345,6 +352,7 @@ div.dropdown-menu.show {
   border: 2px solid $primary;
   border-top: 0px;
   border-radius: 0;
+  z-index: 6;
   a {
     color: $primary;
     text-decoration: none;
